--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --project ./"
   },
-  "author": "julien tassin <robba.jt@gmail.com>",
+  "author": "julien tassin<robba.jt@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.2.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
